--- a/Reservation Widget/client/public/index.html
+++ b/Reservation Widget/client/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style = "background-color: transparent;">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
@@ -21,7 +21,7 @@
     -->
     <title>Reservation Widget</title>
   </head>
-  <body>
+  <body style = "background-color: transparent;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
